# ai-ecommerce-chatbot

./: .gitignore  README.md  db.sqlite  faq.py  main.py  pyproject.toml  requirements.txt  router.py  small_talk.py  sql.py
vector_store/: chroma.sqlite3
